# AetherEMS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTRACTION.md  NOTICE  README-CN.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
console/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
console/deploy/: aetherems-console.service
console/scripts/: docker-deploy.ps1  docker-deploy.sh
console/src/api/: System.ts  alarm.ts  channelsManagement.ts  devicesManagement.ts  rulesManagement.ts
console/src/api/Statistic/: overview.ts
console/src/api/Statistic/__tests__/: overview.test.ts
console/src/api/__tests__/: System.test.ts  alarm.test.ts  applicationGatewayBoundary.test.ts  channelsManagement.test.ts  devicesManagement.test.ts  rulesManagement.test.ts
console/src/composables/: useTableData.ts
console/src/composables/__tests__/: useTableData.test.ts
console/src/router/__tests__/: guard.test.ts
console/src/stores/: user.ts
console/src/stores/__tests__/: user.test.ts
console/src/types/: ruleManagement.ts
console/src/utils/: request.ts
console/src/utils/__tests__/: csv.test.ts  requestConfirmation.test.ts
console/src/views/Alarm/AlarmCurrentRecords/: index.vue
console/src/views/Alarm/AlarmHistoryRecords/: index.vue
console/src/views/Alarm/RulesManagement/: RulesOperationForm.vue  index.vue
console/src/views/Control/ControlManagement/: RulesOperationForm.vue
console/src/views/Control/ControlRecord/: index.vue
console/src/views/Setting/SystemSetting/: DataUpdataSetting.vue
console/src/views/Setting/SystemSetting/components/: DataUploadDialog.vue  TlsCertificateDialog.vue
crates/aetherems-composition/: Cargo.toml
crates/aetherems-composition/src/: core_gateway.rs  lib.rs  load_forecast.rs  main.rs
crates/aetherems-composition/tests/: composition_contract.rs  data_processing_composition.rs  pack_artifact_contract.rs  sdk_facade_contract.rs
distribution/: aetheriot-dependency.toml
docs/adr/: 0001-independent-aetherems-distribution.md
packs/energy/: README.md  pack.yaml
packs/energy/data-processing/: README.md
packs/energy/examples/config/io/: io.yaml
packs/energy/knowledge/: control-strategies.md  ess-primer.md  power-forecasting.md  product-models.md  safe-operations.md
processors/load-forecasting/deploy/: README.md
scripts/: build-pack-artifact.sh  check-release-readiness.sh  check-repository-boundary.sh  verify-aetheriot-release-evidence.sh
