[workspace]
resolver = "3"
members = ["crates/aetherems-composition"]
default-members = ["crates/aetherems-composition"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EvanL1/AetherEMS"

[workspace.dependencies]
# One supported AetherEdge facade, pinned to the exact v0.5.0 release commit.
aether-sdk = { package = "aether-edge-sdk", git = "https://github.com/EvanL1/AetherEdge.git", rev = "fbb9f3ecd52085072979461dd4a069c73d26397b", features = ["local-runtime"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = { package = "serde_yaml_ng", version = "0.10" }
tempfile = "3.8"
thiserror = "2"
tokio = { version = "1.35", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
